--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -3,8 +3,6 @@ steps:
     args:
       - 'build'
       - '--build-arg'
-      - 'GEMINI_API_KEY=$_GEMINI_API_KEY'
-      - '--build-arg'
       - 'GEMINI_MODEL_NAME=$_GEMINI_MODEL_NAME'
       - '-t'
       - '$_IMAGE_NAME'
@@ -12,6 +10,5 @@ steps:
 images:
   - '$_IMAGE_NAME'
 substitutions:
-  _GEMINI_API_KEY: 'CHANGE_ME' # Pass this via command line
-  _GEMINI_MODEL_NAME: 'gemini-3-flash-preview' # Default model
+  _GEMINI_MODEL_NAME: 'gemini-2.5-flash' # Default model
   _IMAGE_NAME: 'us-central1-docker.pkg.dev/aegis-482716/aegis/aegis' # Default tag
